@@ -1,5 +1,10 @@
 2004-03-04  Mike Kestner  <mkestner@ximian.com>
 
+	* Main/Base/Services/DebuggingService.cs : add Started/Stopped and 
+	Paused/Resumed events plus a CurrentFrame property.
+
+2004-03-04  Mike Kestner  <mkestner@ximian.com>
+
 	* Main/Base/Services/DebuggingService.cs : add Pause/Resume and make
 	IsRunning public.
 
